# PyHL

./: .flake8  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  settings.yaml  setup_dynaconf.md
.github/workflows/: ci.yaml
contrib/: settings-example.toml  settings_example.yaml
djhl/: settings.py  urls.py
djhl/core/: models.py
djhl/core/migrations/: 0001_initial.py
djhl/core/tests/: test_app.py
