[tool.poetry]
name = "pyhl"
version = "0.1.0"
description = "Python Home Library Manager"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
dynaconf = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
