[tool.poetry]
name = "pyhl"
version = "0.1.0"
description = "Python Home Library Manager"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
dynaconf = "^2.2.3"
PyYaml = "^5.3.1"
psycopg2-binary = "^2.8.5"
djangorestframework = "^3.11.0"
markdown = "^3.2.2"
django-filter = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
